[tool.poetry]
name = "carberra-carberretta"
version = "0.1.2"
description = "Discord bot designed to handle specific tasks in the Carberra Tutorials server."

license = "BSD-3-Clause"
repository="https://github.com/Carberra/Carberretta"
readme="README.md"

authors = [
    "Ethan Henderson <parafoxia@carberra.xyz>",
    "Max Shaughnessy <max@mshaugh.com>"
]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.4.1"
apscheduler = "^3.6.3"
aiosqlite = "^0.13.0"
aiofiles = "^0.5.0"
python-dotenv = "^0.13.0"
psutil = "^5.7.0"
emoji = "^0.6.0"

[tool.poetry.dev-dependencies]
mypy = "^0.782"
black = "^19.10b0"

[tool.black]
line-length = 119
target-version = ["py38"]
