[tool.poetry]
name = "carberra-carberretta"
version = "1.4.0"
description = "Discord bot designed to handle specific tasks in the Carberra Tutorials server."

license = "BSD-3-Clause"
repository="https://github.com/Carberra/Carberretta"
readme="README.md"

authors = [
    "Ethan Henderson <parafoxia@carberra.xyz>",
    "Max Shaughnessy <max@mshaugh.com>"
]

[tool.poetry.dependencies]
python = "^3.8"
aiofiles = "^0.5.0"
aiosqlite = "^0.13.0"
apscheduler = "^3.6.3"
"discord.py" = "^1.5.0"
feedparser = "^6.0.2"
psutil = "^5.8.0"
PyGithub = "^1.55"
pygount = "^1.2.4"
python-dotenv = "^0.13.0"
toml = "^0.10.1"
urllib3 = "^1.26.4"

[tool.poetry.dev-dependencies]
mypy = "^0.782"
black = "^19.10b0"

[tool.black]
line-length = 119
target-version = ["py38"]
